Reverse the if and else clauses for the chardata test if there is no format string specified.

Fixes PR bin/12424 from Jim Bernard.